[workspace]
members = ["packages/*", "contracts/*"]
resolver = "2"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[workspace.dependencies]
cosmwasm-schema = "1.4.0"
cosmwasm-std = { version = "1.4.0", features = ["stargate"] }
cosmwasm-storage = "1.4.0"
cw-storage-plus = "1.1.0"
cw-utils = "1.0.1"
cw2 = "1.1.0"
schemars = "0.8.15"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.48" }
