[workspace]
members = [
  "packages/*",
  "contracts/*",
  "proto-build"
]
resolver = "2"

[workspace.package]
authors = ["Augusto Elesbão <aelesbao@users.noreply.github.com>"]
license = "Apache-2.0"
repository = "https://github.com/archway-network/arch3.rs"
homepage = "https://archway.io"

[workspace.dependencies]
cosmwasm-schema = "1.4.0"
cosmwasm-std = { version = "1.4.0", features = ["stargate"] }
cosmwasm-storage = "1.4.0"
cw-storage-plus = "1.1.0"
cw-utils = "1.0.1"
cw2 = "1.1.0"
schemars = "0.8.15"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.48" }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false
