[package]
name = "proto-build"
version = "0.2.0"
edition = "2021"
description = "Build script for archway-proto"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0.36"
proc-macro2 = "1.0"
error-chain = "0.12.4"
glob = "0.3.1"
regex = "1.9.3"
