[package]
name = "grpc-client"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
archway-proto = { path = "../../packages/proto" }
anyhow = "1.0.75"
prost = "0.11.9"
tonic = { version = "0.9.2", features = ["tls", "tls-roots", "tls-roots-common", "gzip"] }
tokio = { version = "1.33.0", features = ["full"] }
